--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <button id="toggleBtn">▶️</button>
     <input type="range" id="volume" min="0" max="1" step="0.01" value="0.3">
     <audio id="bg-music" loop>
-      <source src="music/background-music.mp3" type="audio/mpeg">
+      <source src="background-music.mp3" type="audio/mpeg">
     </audio>
   </section>
 
@@ -171,3 +171,4 @@
 
 </body>
 </html>
+
